hum.. Load/Save in the rush. Need to be done better. Pay attention to customer class

--- a/sample/16_17/CSE1325_Paint/012-open_any/Makefile
+++ b/sample/16_17/CSE1325_Paint/012-open_any/Makefile
@@ -7,6 +7,8 @@ rebuild: clean all
 debug: CXXFLAGS += -g
 debug: rebuild
 
+test_line: test_line.o line.o *.h
+	$(CXX) $(CXXFLAGS) -g -o  a test_line.o line.o `/usr/bin/pkg-config gtkmm-3.0 --cflags --libs`
 main: main.o mainwin.o line.o view.o *.h
 	$(CXX) $(CXXFLAGS) -o paint main.o mainwin.o line.o view.o `/usr/bin/pkg-config gtkmm-3.0 --cflags --libs`
 main.o: main.cpp *.h
@@ -16,9 +18,12 @@ mainwin.o: mainwin.cpp *.h
 view.o: view.cpp *.h
 	$(CXX) $(CXXFLAGS) -c view.cpp `/usr/bin/pkg-config gtkmm-3.0 --cflags --libs`
 line.o: line.cpp *.h
-	$(CXX) $(CXXFLAGS) -c line.cpp `/usr/bin/pkg-config gtkmm-3.0 --cflags --libs`
+	$(CXX) $(CXXFLAGS) -g -c line.cpp `/usr/bin/pkg-config gtkmm-3.0 --cflags --libs`
+test_line.o: test_line.cpp *.h
+	$(CXX) $(CXXFLAGS) -g -c  test_line.cpp `/usr/bin/pkg-config gtkmm-3.0 --cflags --libs`
+
 clean:
-	-rm -f *.o paint
+	-rm -f *.o paint test_line
 div:
 	@echo
 	@echo 'X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-X-'
